<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">Shoes Store</string>

    <string name="facebook_app_id">176451419644731</string>

    <string name="fb_login_protocol_scheme">fb176451419644731</string>

    <string name="google_auth_client_id">463465601152-3habmrj9gdbhdi6pi54prv5utqjmoptg.apps.googleusercontent.com</string>
    <string name="google_maps_api_key">AIzaSyA68a2s_ghdOUJMc3O11C0T4Tn125bEbUE</string>

    <string name="label_accept">Accept</string>
    <string name="label_account">Account</string>
    <string name="label_account_holder">Account Holder</string>
    <string name="label_account_number">Account Number</string>
    <string name="label_add_to_cart">Add to cart</string>
    <string name="label_address">Address</string>
    <string name="label_amount">Amount</string>
    <string name="label_back_to_home">Back to Home</string>
    <string name="label_bank">Bank</string>
    <string name="label_bank_transfer">Bank Transfer</string>
    <string name="label_brand">Brand</string>
    <string name="label_brands">Brands</string>
    <string name="label_cart">Cart</string>
    <string name="label_cash_on_delivery">Cash On Delivery</string>
    <string name="label_categories">Category</string>
    <string name="label_category">Category</string>
    <string name="label_change_password">Change Password</string>
    <string name="label_confirm_password">Retype password</string>
    <string name="label_content">Content</string>
    <string name="label_create_review">Write A Review</string>
    <string name="label_delivery_information">Delivery Information</string>
    <string name="label_email">Email</string>
    <string name="label_error">Error</string>
    <string name="label_filter">Filter</string>
    <string name="label_free">FREE</string>
    <string name="label_gender_age">Gender/Age</string>
    <string name="label_home">Home</string>
    <string name="label_items">Items</string>
    <string name="label_login">Login</string>
    <string name="label_logout">Log Out</string>
    <string name="label_message">Message</string>
    <string name="label_my_orders">My Orders</string>
    <string name="label_my_profile">My Profile</string>
    <string name="label_my_wish_list">My Wish List</string>
    <string name="label_name">Name</string>
    <string name="label_newest_products">Our Newest</string>
    <string name="label_not_available">Not Available</string>
    <string name="label_oops">Oops, something wrong happened!</string>
    <string name="label_order_date">Order Date</string>
    <string name="label_order_id">Order ID</string>
    <string name="label_password">Password</string>
    <string name="label_payment_method">Payment Method</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="label_place_order">Place Order</string>
    <string name="label_place_order_success">Order Successful</string>
    <string name="label_price_range">Price Range</string>
    <string name="label_product_description">Product Description</string>
    <string name="label_refresh">Refresh</string>
    <string name="label_register">Register</string>
    <string name="label_reset_password">Reset Password</string>
    <string name="label_reviews">Reviews</string>
    <string name="label_sale_products">On Sale</string>
    <string name="label_search">Search</string>
    <string name="label_search_result">Search Result</string>
    <string name="label_searching">Searching</string>
    <string name="label_select_filters">Select Filters</string>
    <string name="label_show_all_reviews">Show all...</string>
    <string name="label_sign_in_with">Sign in with</string>
    <string name="label_size">Size</string>
    <string name="label_store_information">Shop Information</string>
    <string name="label_submit">Submit</string>
    <string name="label_submit_order">Submit Order</string>
    <string name="label_success">Success</string>
    <string name="label_title">Title</string>
    <string name="label_top_rating_products">Top Rating</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_update">Update</string>
    <string name="label_update_profile">Update Profile</string>
    <string name="label_update_review">Update Review</string>
    <string name="label_website">Website</string>

    <string name="msg_AuthActionResult_ACTION_REQUIRE_SIGN_IN">You must sign in to perform the action.</string>
    <string name="msg_AuthActionResult_INCORRECT_PASSWORD">Password incorrect.</string>
    <string name="msg_AuthActionResult_INVALID_EMAIL">Invalid email.</string>
    <string name="msg_AuthActionResult_INVALID_OR_EXPIRED_TOKEN">Token is invalid or expired.</string>
    <string name="msg_AuthActionResult_INVALID_PASSWORD">Invalid password.</string>
    <string name="msg_AuthActionResult_REGISTER_EMAIL_ALREADY_EXIST">Email has already been registered.</string>
    <string name="msg_AuthActionResult_SERVER_ERROR">There is a problem with the authentication server.</string>
    <string name="msg_AuthActionResult_SIGN_IN_EMAIL_NOT_EXIST">Email has not been registered.</string>
    <string name="msg_AuthActionResult_SIGN_IN_METHOD_ALREADY_LINKED">External account has already linked to your email.</string>
    <string name="msg_AuthActionResult_SIGN_IN_METHOD_NOT_LINKED">External account has not been linked to your email.</string>
    <string name="msg_AuthActionResult_SUCCESSFUL">Action completed successfully.</string>
    <string name="msg_AuthActionResult_UNKNOWN_ERROR">Unknown error occurred.</string>
    <string name="msg_add_cart_success">Product has been added to cart.</string>
    <string name="msg_bank_transfer_hint">The items will be delivered after receiving your payment to our account as follow:</string>
    <string name="msg_change_password_success">Your password has been changed.</string>
    <string name="msg_delivered">Delivered</string>
    <string name="msg_delivering">Delivering</string>
    <string name="msg_empty_cart">Your cart is empty.</string>
    <string name="msg_empty_list_content">Nothing to display.</string>
    <string name="msg_exception_toast_format">ERROR: %1$s</string>
    <string name="msg_facebook_permission_error">Missing or denied Facebook permissions.</string>
    <string name="msg_favorite_action_require_sign_in">You must sign in to add product to wish list.</string>
    <string name="msg_forget_password_text">I have forgotten my password</string>
    <string name="msg_input_address_empty">You have not input your address.</string>
    <string name="msg_input_confirm_password_not_match">Confirm password do not match.</string>
    <string name="msg_input_content_empty">Content must not be empty.</string>
    <string name="msg_input_email_empty">You have not input an email address.</string>
    <string name="msg_input_email_invalid">Invalid email.</string>
    <string name="msg_input_name_empty">You have not input your name.</string>
    <string name="msg_input_password_empty">You have not input a password.</string>
    <string name="msg_input_password_too_short">Password must be at least 6 characters.</string>
    <string name="msg_input_phone_number_empty">You have not input a phone number.</string>
    <string name="msg_input_phone_number_invalid">Invalid phone number.</string>
    <string name="msg_input_title_empty">Title must not be empty.</string>
    <string name="msg_network_unconnected">Your device is not connected to the Internet. Please check your network settings.</string>
    <string name="msg_not_yet_delivered">Preparing for delivery</string>
    <string name="msg_order_completed">Order was completed</string>
    <string name="msg_order_list_empty">Nothing to display.</string>
    <string name="msg_order_rejected">Order has been rejected by the seller.</string>
    <string name="msg_payment_made">Payment has been made</string>
    <string name="msg_payment_waiting">Waiting for payment</string>
    <string name="msg_place_order_fail">Place order failed.</string>
    <string name="msg_place_order_require_sign_in">You must sign in to place order.</string>
    <string name="msg_please_wait">Please wait...</string>
    <string name="msg_posted_by_format">%1$s - %2$s</string>
    <string name="msg_product_add_to_wish_list_success">Product has been added to your wish list.</string>
    <string name="msg_product_already_in_wish_list">Product is already in wish list.</string>
    <string name="msg_product_not_available">Product is not available.</string>
    <string name="msg_product_not_in_wish_list">Product is not in wish list.</string>
    <string name="msg_product_remove_from_wish_list_success">Product has been removed from your wish list.</string>
    <string name="msg_reset_password_success">Password reset email has been sent.</string>
    <string name="msg_review_require_sign_in">You must sign in to write a review.</string>
    <string name="msg_search_hint">Enter keyword</string>
    <string name="msg_search_result_empty">No item match your search.</string>
    <string name="msg_select_brand">Choose a brand</string>
    <string name="msg_select_category">Choose a category</string>
    <string name="msg_select_filter">Please select the filters</string>
    <string name="msg_select_gender">Choose a gender</string>
    <string name="msg_submit_review_failed">Failed to submit review.</string>
    <string name="msg_submit_review_success">Your review has been submitted.</string>
    <string name="msg_thank_you">Thank you for your order to our store.\nHere is the order information.</string>
    <string name="msg_thank_you_again">You can check the status of your orders in\nAccount / My Orders screen.\nAgain, thank you and have a nice day.</string>
    <string name="msg_total_price">Total:</string>
    <string name="msg_update_profile_success">Your profile has been updated.</string>
    <string name="msg_welcome_format">Hi, %1$s</string>
    <string name="msg_wish_list_empty">Your wish list is empty.</string>
</resources>
