<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/label_select_filters">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/large_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/msg_select_filter"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_padding"
                        android:text="@string/label_category"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnCategory"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_margin"
                        android:background="@drawable/bg_filter_spinner"
                        android:prompt="@string/msg_select_category"
                        android:spinnerMode="dialog" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_padding"
                        android:text="@string/label_brands"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnBrand"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_margin"
                        android:background="@drawable/bg_filter_spinner"
                        android:prompt="@string/msg_select_brand"
                        android:spinnerMode="dialog" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_padding"
                        android:text="@string/label_gender_age"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spnGender"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="@dimen/small_margin"
                        android:background="@drawable/bg_filter_spinner"
                        android:prompt="@string/msg_select_gender"
                        android:spinnerMode="dialog" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:padding="@dimen/default_padding"
                        android:text="@string/label_price_range"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_span="2"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_padding">

                        <TextView
                            android:id="@+id/tvMinPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="50dp"
                            android:text="0"
                            android:textColor="#000" />

                        <com.crystal.crystalrangeseekbar.widgets.BubbleThumbRangeSeekbar
                            android:id="@+id/rsbPriceRange"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/default_margin"
                            android:layout_marginRight="@dimen/default_margin"
                            android:layout_weight="1"
                            app:bar_color="#F7BB88"
                            app:bar_highlight_color="#E07416"
                            app:corner_radius="10"
                            app:data_type="_integer"
                            app:left_thumb_image="@drawable/seek_thumb_normal"
                            app:left_thumb_image_pressed="@drawable/seek_thumb_pressed"
                            app:max_value="1000"
                            app:min_value="0"
                            app:right_thumb_image="@drawable/seek_thumb_normal"
                            app:right_thumb_image_pressed="@drawable/seek_thumb_pressed"
                            app:steps="5" />

                        <TextView
                            android:id="@+id/tvMaxPrice"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="50dp"
                            android:text="1000"
                            android:textAlignment="textEnd"
                            android:textColor="#000" />

                    </LinearLayout>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/btnAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:background="@drawable/primary_button"
                android:text="@string/label_accept" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
